# password-manager

./: .gitignore  CMakeLists.txt  LICENCE  resources.qrc
src/: main.cpp
src/crypto/: encryption.cpp  encryption.h
src/models/: passwordentry.cpp  passwordentry.h  settings.cpp  settings.h  vaultinfo.cpp  vaultinfo.h
src/storage/: database.cpp  database.h  vaultmanager.cpp  vaultmanager.h
src/styles/: loginwindow.qss  mainwindow.qss  passworddialog.qss  theme-dark.qss  theme-light.qss  vaultmanager.qss
src/ui/: loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  settingsdialog.cpp  settingsdialog.h  thememanager.cpp  thememanager.h  vaultmanagerwindow.cpp  vaultmanagerwindow.h
